<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radio_group_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_shape">

        <RadioButton
            android:id="@+id/rb_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_brush" />

        <RadioButton
            android:id="@+id/rb_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_line" />

        <RadioButton
            android:id="@+id/rb_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_arrow" />

        <RadioButton
            android:id="@+id/rb_oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_oval" />

        <RadioButton
            android:id="@+id/rb_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rectangle" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/sb_brush_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progress="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_brush" />

    <SeekBar
        android:id="@+id/sb_opacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="255"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_opacity" />

    <TextView
        android:id="@+id/tv_brush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/label_brush"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_shape" />

    <TextView
        android:id="@+id/tv_opacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/opacity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_brush" />

    <TextView
        android:id="@+id/tv_shape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/label_shape"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shape_colors"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_opacity"
        tools:background="@android:color/black"
        tools:listitem="@layout/color_picker_item_list" />

</androidx.constraintlayout.widget.ConstraintLayout>
