<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue"
        android:elevation="10dp"
        android:gravity="center"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/new_ticket"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_fill_close" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingHorizontal="20dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ticket_type"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <Spinner
                        android:id="@+id/sp_ticket_type"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/rounded_edit_text"
                        android:dropDownWidth="match_parent"
                        android:dropDownVerticalOffset="5dp"
                        android:entries="@array/ticket_type_array"
                        android:gravity="center_vertical"
                        android:overlapAnchor="false"
                        android:padding="3dp"
                        android:spinnerMode="dropdown"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ic_drop_down"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="end|center"
                        android:src="@drawable/ic_down_arrow" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/description"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:gravity="top|start"
                    android:hint="@string/add_description_here"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:textColorHint="@color/grey_dark"
                    android:textSize="14sp"
                    android:maxLength="255" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/email"
                    android:textColor="@color/grey_dark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/add_email_here"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColorHint="@color/grey_dark"
                    android:textSize="14sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_bug_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_bug"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/border" />

                <ImageView
                    android:id="@+id/ic_remove"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_fill_close" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/run_on_apps_on_air"
                android:textColor="@color/button_color"
                android:layout_marginVertical="30dp"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>