<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="36dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/maintenance_icon" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_regular"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_title_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/title"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_des_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="5dp"
            android:text="@string/description"
            android:textColor="@color/maintenance_description"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lls_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="36dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img2_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/maintenance_icon" />

        <TextView
            android:id="@+id/txt_title2_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/maintenance"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>